# diploma_goals_planner

./: .dockerignore  .editorconfig  .gitignore  Dockerfile  README.md  docker-compose.yaml  manage.py  pyproject.toml  tg_get_response.json  tg_send_response.json
.github/workflows/: build_and_push.yaml
bot/: serializers.py  urls.py  views.py
bot/management/commands/: runbot.py  test_bot.py
bot/migrations/: 0001_initial.py
bot/tg/: bot_logic.py  client.py  schemas.py
core/: admin.py  models.py  serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py
deploy/: docker-compose.yaml
goals/: admin.py  filters.py  models.py  permissions.py  serializers.py  urls.py
goals/migrations/: 0001_initial.py  0002_goal.py  0003_rename_due_data_goal_due_date_goalcomment.py  0004_board_goalcategory_board_boardparticipant.py  0005_create_new_objects.py  0006_alter_goalcategory_board.py
goals/views/: boards.py  categories.py  comments.py  goals.py
goals_planner/: asgi.py  fields.py  settings.py  urls.py  wsgi.py
tests/: conftest.py  factories.py  test_views.py
